# Cargo.toml

[package]
name = "touchme"
version = "0.0.3"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "N/A"
repository = "https://github.com/sjm42/touchme"
readme = "README.md"
keywords = []
license = "MIT"
edition = "2024"
resolver = "2"


[dependencies]
anyhow = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
regex = "1"
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
